--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="info" id="info">
+            <div class="info">
                 <h2 class="info__title">О себе</h2>
                 <h3 class="info__fullname">Тюнин Илья Андреевич</h3>
                 <p>
@@ -97,15 +97,12 @@
                     <span>Открыть портфолио</span>
                 </button>
             </div>
-            <div class="portfolio" id="portfolio">
+            <div class="portfolio">
                 <h2 class="info__title">Портфолио</h2>
                 <div class="images">
-                    <img src="img/image.png" alt="" />
+                    <img src="img/image1.png" alt="" />
                     <img src="img/image2.png" alt="" />
                     <img src="img/image3.png" alt="" />
-                    <img src="img/image2.png" alt="" />
-                    <img src="img/image4.png" alt="" />
-                    <img src="img/image5.png" alt="" />
                 </div>
                 <button data-about="about" class="portfolio__btn about__btn">
                     <span>Открыть блок о себе</span>
