--- a/index.html
+++ b/index.html
@@ -40,20 +40,12 @@
                     </button>
                     <ul class="menu__list hide">
                         <li class="menu__item">
-                            <a
-                                data-about="about"
-                                href="#info"
-                                class="menu__link"
-                            >
+                            <a data-about="about" class="menu__link">
                                 О себе
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a
-                                data-portfolio="portfolio"
-                                href="#portfolio"
-                                class="menu__link"
-                            >
+                            <a data-portfolio="portfolio" class="menu__link">
                                 Портфолио
                             </a>
                         </li>
@@ -100,19 +92,19 @@
             <div class="portfolio">
                 <h2 class="info__title">Портфолио</h2>
                 <div class="images">
-                    <img src="img/image1.png" alt="" />
-                    <img src="img/image2.png" alt="" />
-                    <img src="img/image3.png" alt="" />
+                    <img class="images__item" src="img/image1.png" alt="" />
+                    <img class="images__item" src="img/image2.png" alt="" />
+                    <img class="images__item" src="img/image3.png" alt="" />
                 </div>
                 <button data-about="about" class="portfolio__btn about__btn">
                     <span>Открыть блок о себе</span>
                 </button>
-                <!-- Ваш код, где блок со скриншотом сваггера с лабораторной работы №2... -->
             </div>
         </div>
         <div class="wrapper">
             <img src="img/image.png" alt="" />
         </div>
+        <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
