--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <div class="container">
             <div class="header">
                 <h1 class="header__logo">визитка</h1>
+                <ul class="header__links">
+                    <li><a data-about="about" class="menu__link">О себе</a></li>
+                    <li>
+                        <a data-portfolio="portfolio" class="menu__link"
+                            >Портфолио</a
+                        >
+                    </li>
+                </ul>
                 <div class="header__menu menu">
                     <button class="menu__btn">
                         <svg
